--- a/BookManagement/appsettings.json
+++ b/BookManagement/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.01;Database=test;User Id=sa;Password=Strong!Passw0rd;"
+  }
 }
